01.deploy-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lab-api
  labels:
    app: lab-api
spec:
  containers:
  - name: lab-api
    image: mwpro/k8s-labs:api-1.0
