03.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-api
  labels:
    app: lab-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lab-api
  template:
    metadata:
      labels:
        app: lab-api
    spec:
      containers:
      - name: lab-api
        image: mwpro/k8s-labs:api-1.0
