06.deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-frontend
  labels:
    app: lab-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lab-frontend
  template:
    metadata:
      labels:
        app: lab-frontend
    spec:
      containers:
      - name: lab-frontend
        image: mwpro/k8s-labs:frontend-1.0
---
apiVersion: v1
kind: Service
metadata:
  name: lab-frontend
spec:
  selector:
    app: lab-frontend
  ports:
  - port: 80
    targetPort: 8080
