07.ingress-routing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lab-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: lab.foo
    http:
      paths:
      - path: /api
        backend:
         serviceName: lab-api
         servicePort: 80
      - path: /
        backend:
          serviceName: lab-frontend
          servicePort: 80
